just need to implement logic

--- a/app/assets/stylesheets/pages/_footer.scss
+++ b/app/assets/stylesheets/pages/_footer.scss
@@ -11,7 +11,7 @@ footer {
   height:50px;
   bottom: 0;
   width: 100%;
-  background-color: rgb(46, 75, 37);
+  background-color: $black;
   color: white;
   text-align: center;
 }
