--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,6 +8,7 @@
 @import "home/logo";
 @import "home/banner";
 @import "home/search";
+@import "home/midi_card_list_popular";
 
 @import "image-slide/image_slide";
 
