--- a/app/views/midis/new.html.erb
+++ b/app/views/midis/new.html.erb
@@ -8,10 +8,10 @@
     <%= f.input :bpm %>
     <%= f.input :category, collection: Midi.categories.map {|key, value| [key.titleize, Midi.categories.key(value)]} %>
     <%= f.input :mood_ids, collection: Mood.all, as: :check_boxes, include_hidden: false %>
-    <%= f.input :midi_file, as: :file, input_html: { data: {convert_midi_to_json_target: "input", action: "change->convert-midi-to-json#toJson"} }, class: "uploader"%>
+    <%= f.input :midi_file, as: :file, required: true, input_html: { data: {convert_midi_to_json_target: "input", action: "change->convert-midi-to-json#toJson"} }, class: "uploader"%>
     <%= f.input :midi_json, as: :hidden, input_html: { data: { convert_midi_to_json_target: "result" } } %>
     <div>
-      <%= f.button :submit, "Confirmed", class: "neon-button-secondary, neon-button-search" %>
+      <%= f.button :submit, "Upload", class: "neon-button-secondary, neon-button-search" %>
     </div>
   <% end %>
 </div>
