--- a/app/views/midis/_show_comments.html.erb
+++ b/app/views/midis/_show_comments.html.erb
@@ -30,6 +30,6 @@
                   placeholder: 'Add a comment..',
                   required: true
                   %>
-      <%= f.submit %>
+      <%= f.submit class: "btn btn-light"%>
     <% end %>
 </div>
