--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :instagram_link, placeholder: "Insert Instagram link..." %>
     <%= f.input :facebook_link, placeholder: "Insert Facebook link..." %>
     <div>
-      <%= f.button :submit, "Confirmed", class: "neon-button-secondary, neon-button-search" %>
+      <%= f.button :submit, "update", class: "neon-button-secondary, neon-button-search" %>
     </div>
   <% end %>
 </div>
