--- a/app/views/midis/_midi_card.html.erb
+++ b/app/views/midis/_midi_card.html.erb
@@ -34,7 +34,7 @@
       <% end %>
       <!-- adjusted y-axis spectrum based on hightes/lowest note -->
       <% bottom = lowest_note - 5 %>
-      <% bottom = 0 if @bottom.negative? %>
+      <% bottom = 0 if bottom.negative? %>
       <% top = highest_note + 5 %>
       <%= scatter_chart(arr_xy, id: "users-chart", min: bottom, max: top, width: :inherit, height: "70px" ) %>
        <!-- Charting / Plotting END -->
