--- a/app/assets/stylesheets/components/devise/_signup_page.scss
+++ b/app/assets/stylesheets/components/devise/_signup_page.scss
@@ -1,18 +1,17 @@
-
-.login-container {
+.signup-container {
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: black;
+  background-color: rgb(0, 0, 0);
 }
 
-.login-title{
+.signup-title{
   font-family: $body-font;
   text-transform: uppercase;
 }
 
-.login-form-background-wrap {
+.signup-form-background-wrap {
   position: relative;
   display: flex;
   justify-content: center;
@@ -20,7 +19,8 @@
   height: 600px;
 }
 
-.login-form-wrap{
+
+.signup-form-wrap{
   position: absolute;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 20;
@@ -32,14 +32,14 @@
   opacity: 1;
 }
 
-.buttons-wrap{
+.signup-button-wrap{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.login-glow-background::before , .login-glow-background:after{
+.signup-glow-background::before , .signup-glow-background:after{
   content: '';
   position: absolute;
   // background: linear-gradient(90deg, $neon-blue, white, $neon-blue, $neon-blue, white, $neon-blue);
@@ -51,10 +51,10 @@
   z-index: 1;
   width: calc(100% + 10px);
   height: calc(100% + 10px);
-  animation: login-animate 20s linear infinite;
+  animation: signup-animate 20s linear infinite;
 }
 
-@keyframes login-animate{
+@keyframes signup-animate{
   0%{
     background-position: 0 0;
   }
@@ -68,35 +68,41 @@
   }
 }
 
-.login-glow-background::after{
+.signup-glow-background::after{
   filter: blur(200px);
   opacity: 0.99;
 }
 
-.login_button:hover {
-  background-color: black;
-  color:white;
-}
-
-.signup-link{
+.register-button{
   text-decoration: none;
-  // border: 1px solid black;
-
-  color: white;
-  font-family: $body-font;
-  text-transform: uppercase;
-  padding: 11px 9px;
-  border-radius: 3px;
-  transition: 0.2s;
-
   background-color: transparent !important;
   color: white !important;
   border: 2px solid white !important;
+  font-family: $body-font;
+  text-transform: uppercase;
+  padding: 14px 9px;
+  border-radius: 3px;
+  transition: 0.2s;
 }
 
-.signup-link:hover {
+.register-button:hover {
   background-color: rgba(255, 255, 255, 0.8);
   box-shadow: 0 0 5px white, 0 0 20px rgb(255, 255, 129), 0 0 10px rgb(255, 255, 41);
   transition-delay: 0.2s;
   color: black;
+}
+
+.simple_form {
+  position: relative;
+}
+
+
+.signup-container .alert {
+  position: absolute;
+  display: none;
+}
+
+.invalid-feedback {
+  position: absolute;
+  left: 251px;
 }
