--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,32 @@
-<div class="container col-3">
-  <div class="text-center"><h1>Sign up</h1></div>
-   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
-    <%= f.error_notification %>
+<div class="signup-container">
+  <div class="signup-form-background-wrap">
+    <div class="signup-glow-background"></div>
+    <div class="signup-form-wrap">
+      <div class="signup-title text-center mb-4 mt-3"><h1>Sign up</h1></div>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
+        <%= f.error_notification %>
 
-    <div class="form-inputs">
-      <%= f.input :username,
-                  required: true,
-                  autofocus: true,
-                  input_html: { autocomplete: "username" } %>
-      <%= f.input :email,
-                  required: true,
-                  input_html: { autocomplete: "email" }%>
-      <%= f.input :password,
-                  required: true,
-                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                  input_html: { autocomplete: "new-password" } %>
-      <%= f.input :password_confirmation,
-                  required: true,
-                  input_html: { autocomplete: "new-password" } %>
+        <div class="form-inputs">
+          <%= f.input :username,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "username" } %>
+          <%= f.input :email,
+                      required: true,
+                      input_html: { autocomplete: "email" }%>
+          <%= f.input :password,
+                      required: true,
+                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation,
+                      required: true,
+                      input_html: { autocomplete: "new-password" } %>
+        </div>
+        <div class="form-actions signup-button-wrap">
+          <%= f.button :submit, "Register", class: "register-button mt-4"%>
+        </div>
+      <% end %>
+      </div>
     </div>
-
-    <div class="form-actions align-items-center text-center">
-      <%= f.button :submit, "Sign up", class: "btn btn-light, neon-button-secondary, neon-button-search", style: "margin-right: 30px"%>
-    </div>
-  <% end %>
+  </div>
 </div>
