--- a/app/views/midis/_midi_card_buttons.html.erb
+++ b/app/views/midis/_midi_card_buttons.html.erb
@@ -17,7 +17,7 @@
     </div>
     <%= midi.upvotes.count %>
   </div>
-  <div class="midi-card-details-bottom-downloads">
+  <div class="midi-card-details-bottom-downloads" data-controller="increase-download">
     <div>
       <%= link_to ("https://medee-870.s3.eu-central-1.amazonaws.com/#{midi.midi_file.key}"), target: "blank" do %>
         <svg width="25" height="23" viewBox="0 0 25 23" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -26,7 +26,13 @@
         </svg>
       <% end %>
     </div>
-    <%= midi.download_count %><!--TODO: MIDI download count increases on download-->
+      <div data-increase-download-target="midiDownloadCounter"><%= midi.download_count %><!--TODO: MIDI download count increases on download--></div>
+        <% simple_form_for(midi) do |f| %>
+          <% f.input :midi_json, as: :hidden, input_html: { data: { convert_midi_to_json_target: "result" } } %>
+        <% end %>
+      <div>
+    </div>
+
   </div>
  <!-- Button trigger modal -->
   <button type="button" class="midi-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
