--- a/app/views/midis/_midi_card_buttons.html.erb
+++ b/app/views/midis/_midi_card_buttons.html.erb
@@ -27,7 +27,7 @@
       <% end %>
     </div>
 
-    <div data-increase-download-value="midiID">
+    <div class="hide" data-increase-download-midiID-value="/midis/<%= "#{midi.id}" %>/increase_download">
       <%= midi.id %>
     </div>
       <%= midi.download_count %>
