--- a/app/views/midis/_midi_card_buttons.html.erb
+++ b/app/views/midis/_midi_card_buttons.html.erb
@@ -26,13 +26,13 @@
         </svg>
       <% end %>
     </div>
-
-    <div class="hide" data-increase-download-midiID-value="/midis/<%= "#{midi.id}" %>/increase_download">
+  <!--
+    <div class="hide" data-increase-download-midiID-value="/midis/<%"#{midi.id}"%>/increase_download" >
       <%= midi.id %>
     </div>
+  -->
+    <div data-increase-download-target="midiId" data-midi="<%= midi.id %>"></div>
       <%= midi.download_count %>
-
-    </div>
   </div>
  <!-- Button trigger modal -->
   <button type="button" class="midi-button" data-bs-toggle="modal" data-bs-target="#exampleModal">
