style_edit_form_and_upload_midi_render

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -30,4 +30,5 @@
 @import "devise/login_page";
 @import "devise/signup_page";
 
-@import "forms/upload_midi"
+@import "forms/upload_midi";
+@import "forms/edit_midi";
